# immersive-language-learning

./: .env.example  .gitignore  .prettierignore  Dockerfile  GEMINI.md  README.md  immersive-lang-app-schema.json  index.html  package-lock.json  package.json  pnpm-lock.yaml  requirements.txt  turbo.json  vite.config.js
.claude/skills/turborepo-tauri-react/: SKILL.md
.claude/skills/turborepo-tauri-react/references/: eslint-package.md  native-app.md  root-configs.md  shared-package.md  theme-embedded-pattern.md  tsconfig-package.md  ui-package.md  validation-checklist.md  web-app.md
apps/native/: index.html  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
apps/native/public/audio-processors/: capture.worklet.js  playback.worklet.js
apps/native/src/: App.tsx  main.tsx
apps/native/src-tauri/: Cargo.toml  tauri.conf.json
apps/native/src-tauri/capabilities/: default.json
apps/native/src-tauri/icons/: icon.icns
apps/native/src-tauri/src/: db.rs  lib.rs  main.rs  session_history.rs  sync.rs
apps/web/: eslint.config.js  index.html  package.json  tsconfig.json  vite.config.ts
apps/web/public/audio-processors/: capture.worklet.js  playback.worklet.js
apps/web/src/: App.tsx  main.tsx
scripts/: dev.sh  example.deploy.sh  install.sh  list_models.py
server/: main.py
server/server-py/: config_utils.py  gemini_live.py  main.py
server/server-rs/: Cargo.toml  README.md
server/server-rs/src/: config.rs  error.rs  main.rs  state.rs
server/server-rs/src/gemini/: client.rs  messages.rs  mod.rs
server/server-rs/src/handlers/: auth.rs  health.rs  mod.rs  status.rs  websocket.rs
src/components/: app-root.js  view-chat.js  view-missions.js  view-splash.js  view-summary.js
