[package]
name = "immergo-app"
version = "0.1.0"
description = "Immergo - Immersive Language Learning Desktop Application"
authors = ["Google LLC"]
edition = "2021"

[lib]
name = "immergo_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri core
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"

# Serialization (for potential future IPC needs)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[workspace]
